--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,8 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>900</width>
-    <height>510</height>
+    <height>768</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>900</width>
+    <height>768</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>900</width>
+    <height>768</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
