--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>900</width>
-    <height>768</height>
+    <height>517</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>900</width>
-    <height>768</height>
+    <height>510</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>900</width>
-    <height>768</height>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -151,13 +151,13 @@ background-image: url(:/logo.png);</string>
        <string>Player List</string>
       </property>
      </widget>
-     <widget class="QTableWidget" name="tableWidget">
+     <widget class="QTableWidget" name="playerTable">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>50</y>
-        <width>611</width>
-        <height>301</height>
+        <y>30</y>
+        <width>621</width>
+        <height>321</height>
        </rect>
       </property>
       <column>
@@ -172,41 +172,31 @@ background-image: url(:/logo.png);</string>
       </column>
       <column>
        <property name="text">
-        <string>New Column</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
         <string>Last name</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Competition</string>
+        <string>DOB</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Address</string>
+        <string>Mobile</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Paid</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string/>
+        <string>Email</string>
        </property>
       </column>
      </widget>
      <widget class="QPushButton" name="Refine">
       <property name="geometry">
        <rect>
-        <x>660</x>
-        <y>120</y>
-        <width>113</width>
+        <x>790</x>
+        <y>60</y>
+        <width>101</width>
         <height>32</height>
        </rect>
       </property>
