--- a/editplayerdiag.ui
+++ b/editplayerdiag.ui
@@ -85,7 +85,7 @@
   <widget class="QPushButton" name="apply">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>260</x>
      <y>330</y>
      <width>113</width>
      <height>32</height>
@@ -110,7 +110,7 @@
   <widget class="QPushButton" name="cancel">
    <property name="geometry">
     <rect>
-     <x>130</x>
+     <x>20</x>
      <y>330</y>
      <width>113</width>
      <height>32</height>
@@ -280,6 +280,22 @@
    </property>
    <property name="flat">
     <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="deleteButton">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>330</y>
+     <width>113</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Delete</string>
    </property>
   </widget>
  </widget>
