--- a/resources.qrc
+++ b/resources.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>logo.png</file>
         <file>mockData.csv</file>
+        <file>calendar-1559935_960_720.png</file>
     </qresource>
 </RCC>
