--- a/addplayerdiag.ui
+++ b/addplayerdiag.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>337</height>
+    <height>341</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>49</x>
-     <y>50</y>
+     <x>50</x>
+     <y>40</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>90</y>
+     <y>80</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -56,7 +56,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>170</y>
+     <y>180</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -69,7 +69,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>210</y>
+     <y>220</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -82,7 +82,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>250</y>
+     <y>260</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -95,7 +95,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>240</y>
+     <y>250</y>
      <width>171</width>
      <height>41</height>
     </rect>
@@ -142,8 +142,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>290</y>
+     <x>270</x>
+     <y>300</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -167,8 +167,8 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>290</y>
+     <x>150</x>
+     <y>300</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -181,7 +181,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>50</y>
+     <y>40</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -191,27 +191,33 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>90</y>
+     <y>80</y>
      <width>171</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
   <widget class="QLineEdit" name="dob">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>210</x>
      <y>130</y>
-     <width>131</width>
+     <width>101</width>
      <height>21</height>
     </rect>
+   </property>
+   <property name="acceptDrops">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QLineEdit" name="mob">
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>170</y>
+     <y>180</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -221,7 +227,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>210</y>
+     <y>220</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -230,14 +236,17 @@
   <widget class="QPushButton" name="cal">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>130</y>
-     <width>31</width>
-     <height>21</height>
+     <x>330</x>
+     <y>110</y>
+     <width>51</width>
+     <height>51</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/calendar-1559935_960_720.png);</string>
+   </property>
    <property name="text">
-    <string>PushButton</string>
+    <string/>
    </property>
   </widget>
  </widget>
