--- a/editplayerdiag.ui
+++ b/editplayerdiag.ui
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>170</y>
+     <y>180</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -40,17 +40,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>250</y>
-     <width>171</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="dob">
-   <property name="geometry">
-    <rect>
-     <x>200</x>
-     <y>170</y>
+     <y>260</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -73,7 +63,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>290</y>
+     <y>300</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -86,7 +76,7 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>330</y>
+     <y>340</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -111,7 +101,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>330</y>
+     <y>340</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -147,7 +137,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>280</y>
+     <y>290</y>
      <width>171</width>
      <height>41</height>
     </rect>
@@ -189,7 +179,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>210</y>
+     <y>220</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -199,7 +189,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>250</y>
+     <y>260</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -212,7 +202,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>210</y>
+     <y>220</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -234,33 +224,10 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QLabel" name="label_7">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>10</y>
-     <width>121</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>ID of Player</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="id">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>40</y>
-     <width>151</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QPushButton" name="search">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>260</x>
      <y>20</y>
      <width>113</width>
      <height>32</height>
@@ -286,7 +253,7 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>330</y>
+     <y>340</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -298,7 +265,79 @@
     <string>Delete</string>
    </property>
   </widget>
+  <widget class="QLineEdit" name="dob">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>180</y>
+     <width>101</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="acceptDrops">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="cal">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>160</y>
+     <width>51</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/calendar-1559935_960_720.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>10</y>
+     <width>127</width>
+     <height>47</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QLabel" name="label_7">
+      <property name="text">
+       <string>ID of Player</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignHCenter|Qt::AlignTop</set>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="id"/>
+    </item>
+   </layout>
+  </widget>
  </widget>
+ <tabstops>
+  <tabstop>id</tabstop>
+  <tabstop>search</tabstop>
+  <tabstop>fName</tabstop>
+  <tabstop>lName</tabstop>
+  <tabstop>dob</tabstop>
+  <tabstop>cal</tabstop>
+  <tabstop>mob</tabstop>
+  <tabstop>email</tabstop>
+  <tabstop>female</tabstop>
+  <tabstop>male</tabstop>
+  <tabstop>cancel</tabstop>
+  <tabstop>deleteButton</tabstop>
+  <tabstop>apply</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
