--- a/refine.ui
+++ b/refine.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>376</height>
+    <height>464</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>DOB</string>
+    <string>DOB From</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lName">
@@ -40,7 +40,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>260</y>
+     <y>320</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -63,7 +63,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>300</y>
+     <y>360</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -76,7 +76,7 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>340</y>
+     <y>400</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -85,7 +85,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Apply</string>
+    <string>Search</string>
    </property>
    <property name="autoDefault">
     <bool>false</bool>
@@ -101,7 +101,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>340</y>
+     <y>400</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -137,7 +137,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>290</y>
+     <y>350</y>
      <width>171</width>
      <height>41</height>
     </rect>
@@ -179,7 +179,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>220</y>
+     <y>280</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -189,7 +189,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>260</y>
+     <y>320</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -202,7 +202,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>220</y>
+     <y>280</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -237,7 +237,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Search</string>
+    <string>Search By ID</string>
    </property>
    <property name="autoDefault">
     <bool>false</bool>
@@ -249,11 +249,11 @@
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QPushButton" name="deleteButton">
+  <widget class="QPushButton" name="clear">
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>340</y>
+     <y>400</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -262,7 +262,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Delete</string>
+    <string>Clear</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="dob">
@@ -303,7 +303,7 @@
      <x>40</x>
      <y>10</y>
      <width>127</width>
-     <height>47</height>
+     <height>51</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -322,6 +322,51 @@
     </item>
    </layout>
   </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>240</y>
+     <width>121</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>DOB To</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="cal_2">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>220</y>
+     <width>51</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/calendar-1559935_960_720.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="dob_2">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>240</y>
+     <width>101</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="acceptDrops">
+    <bool>false</bool>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>id</tabstop>
@@ -335,7 +380,7 @@
   <tabstop>female</tabstop>
   <tabstop>male</tabstop>
   <tabstop>cancel</tabstop>
-  <tabstop>deleteButton</tabstop>
+  <tabstop>clear</tabstop>
   <tabstop>apply</tabstop>
  </tabstops>
  <resources/>
