--- a/editplayerdiag.ui
+++ b/editplayerdiag.ui
@@ -297,7 +297,7 @@
     <string/>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>40</x>
