--- a/refine.ui
+++ b/refine.ui
@@ -7,17 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>464</height>
+    <height>521</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="windowOpacity">
+   <double>1.000000000000000</double>
+  </property>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>180</y>
+     <y>110</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -30,7 +33,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>130</y>
+     <y>60</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -40,7 +43,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>320</y>
+     <y>250</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -50,7 +53,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>130</y>
+     <y>60</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -63,7 +66,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>360</y>
+     <y>290</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -72,11 +75,11 @@
     <string>Gender</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="apply">
+  <widget class="QPushButton" name="search">
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>400</y>
+     <y>330</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -88,7 +91,7 @@
     <string>Search</string>
    </property>
    <property name="autoDefault">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="default">
     <bool>true</bool>
@@ -101,7 +104,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>400</y>
+     <y>330</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -114,7 +117,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>90</y>
+     <y>20</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -124,7 +127,7 @@
    <property name="geometry">
     <rect>
      <x>39</x>
-     <y>90</y>
+     <y>20</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -137,7 +140,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>350</y>
+     <y>280</y>
      <width>171</width>
      <height>41</height>
     </rect>
@@ -166,7 +169,7 @@
      <rect>
       <x>90</x>
       <y>10</y>
-      <width>71</width>
+      <width>51</width>
       <height>20</height>
      </rect>
     </property>
@@ -179,7 +182,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>280</y>
+     <y>210</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -189,7 +192,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>320</y>
+     <y>250</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -202,7 +205,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>280</y>
+     <y>210</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -211,24 +214,11 @@
     <string>MOB</string>
    </property>
   </widget>
-  <widget class="Line" name="line">
-   <property name="geometry">
-    <rect>
-     <x>-3</x>
-     <y>60</y>
-     <width>411</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="search">
+  <widget class="QPushButton" name="searchByID">
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>20</y>
+     <y>400</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -243,7 +233,7 @@
     <bool>false</bool>
    </property>
    <property name="default">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="flat">
     <bool>false</bool>
@@ -253,7 +243,7 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>400</y>
+     <y>330</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -265,14 +255,14 @@
     <string>Clear</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="dob">
+  <widget class="QLineEdit" name="dobFrom">
    <property name="enabled">
     <bool>false</bool>
    </property>
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>180</y>
+     <y>110</y>
      <width>101</width>
      <height>21</height>
     </rect>
@@ -285,7 +275,7 @@
    <property name="geometry">
     <rect>
      <x>320</x>
-     <y>160</y>
+     <y>90</y>
      <width>51</width>
      <height>51</height>
     </rect>
@@ -300,8 +290,8 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>10</y>
+     <x>20</x>
+     <y>390</y>
      <width>127</width>
      <height>51</height>
     </rect>
@@ -326,7 +316,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>240</y>
+     <y>170</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -339,7 +329,7 @@
    <property name="geometry">
     <rect>
      <x>320</x>
-     <y>220</y>
+     <y>150</y>
      <width>51</width>
      <height>51</height>
     </rect>
@@ -351,14 +341,14 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLineEdit" name="dob_2">
+  <widget class="QLineEdit" name="dobTo">
    <property name="enabled">
     <bool>false</bool>
    </property>
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>240</y>
+     <y>170</y>
      <width>101</width>
      <height>21</height>
     </rect>
@@ -367,21 +357,144 @@
     <bool>false</bool>
    </property>
   </widget>
+  <widget class="Line" name="line_2">
+   <property name="geometry">
+    <rect>
+     <x>-10</x>
+     <y>370</y>
+     <width>421</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_3">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>440</y>
+     <width>421</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="whereStatement">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>460</y>
+     <width>91</width>
+     <height>51</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_10">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>460</y>
+     <width>131</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>SELECT * FROM PLAYERS WHERE</string>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_11">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>440</y>
+     <width>31</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>60</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>(</string>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_12">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>440</y>
+     <width>31</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>60</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>)</string>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="custom">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>470</y>
+     <width>113</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Custom Search</string>
+   </property>
+   <property name="autoDefault">
+    <bool>false</bool>
+   </property>
+   <property name="default">
+    <bool>false</bool>
+   </property>
+   <property name="flat">
+    <bool>false</bool>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>id</tabstop>
-  <tabstop>search</tabstop>
+  <tabstop>searchByID</tabstop>
   <tabstop>fName</tabstop>
   <tabstop>lName</tabstop>
-  <tabstop>dob</tabstop>
+  <tabstop>dobFrom</tabstop>
   <tabstop>cal</tabstop>
   <tabstop>mob</tabstop>
   <tabstop>email</tabstop>
   <tabstop>female</tabstop>
-  <tabstop>male</tabstop>
   <tabstop>cancel</tabstop>
   <tabstop>clear</tabstop>
-  <tabstop>apply</tabstop>
+  <tabstop>search</tabstop>
  </tabstops>
  <resources/>
  <connections/>
