--- a/editplayerdiag.ui
+++ b/editplayerdiag.ui
@@ -243,7 +243,7 @@
     <bool>false</bool>
    </property>
    <property name="default">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="flat">
     <bool>false</bool>
