--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -154,7 +154,20 @@ background-image: url(:/logo.png);</string>
        </rect>
       </property>
       <property name="text">
-       <string>refine</string>
+       <string>Refine</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="Clear">
+      <property name="geometry">
+       <rect>
+        <x>790</x>
+        <y>90</y>
+        <width>101</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Clear</string>
       </property>
      </widget>
     </widget>
