--- a/refine.ui
+++ b/refine.ui
@@ -32,7 +32,7 @@
   <widget class="QLineEdit" name="lName">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>220</x>
      <y>60</y>
      <width>171</width>
      <height>21</height>
@@ -42,7 +42,7 @@
   <widget class="QLineEdit" name="email">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>220</x>
      <y>250</y>
      <width>171</width>
      <height>21</height>
@@ -78,7 +78,7 @@
   <widget class="QPushButton" name="search">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>280</x>
      <y>330</y>
      <width>113</width>
      <height>32</height>
@@ -103,7 +103,7 @@
   <widget class="QPushButton" name="cancel">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>160</x>
      <y>330</y>
      <width>113</width>
      <height>32</height>
@@ -116,7 +116,7 @@
   <widget class="QLineEdit" name="fName">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>220</x>
      <y>20</y>
      <width>171</width>
      <height>21</height>
@@ -139,7 +139,7 @@
   <widget class="QGroupBox" name="gender">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>220</x>
      <y>280</y>
      <width>171</width>
      <height>41</height>
@@ -181,7 +181,7 @@
   <widget class="QLineEdit" name="mob">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>220</x>
      <y>210</y>
      <width>171</width>
      <height>21</height>
@@ -217,7 +217,7 @@
   <widget class="QPushButton" name="searchByID">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>280</x>
      <y>430</y>
      <width>113</width>
      <height>32</height>
@@ -242,7 +242,7 @@
   <widget class="QPushButton" name="clear">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>40</x>
      <y>330</y>
      <width>113</width>
      <height>32</height>
@@ -261,7 +261,7 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>220</x>
      <y>110</y>
      <width>101</width>
      <height>21</height>
@@ -274,7 +274,7 @@
   <widget class="QPushButton" name="cal">
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>340</x>
      <y>90</y>
      <width>51</width>
      <height>51</height>
@@ -303,7 +303,7 @@
   <widget class="QPushButton" name="cal_2">
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>340</x>
      <y>150</y>
      <width>51</width>
      <height>51</height>
@@ -322,7 +322,7 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>220</x>
      <y>170</y>
      <width>101</width>
      <height>21</height>
@@ -361,24 +361,30 @@
   <widget class="QPlainTextEdit" name="whereStatement">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>490</y>
+     <x>220</x>
+     <y>480</y>
      <width>171</width>
-     <height>51</height>
+     <height>61</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>490</y>
-     <width>131</width>
-     <height>51</height>
+     <x>40</x>
+     <y>500</y>
+     <width>181</width>
+     <height>41</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>7</pointsize>
+     <italic>false</italic>
+    </font>
+   </property>
    <property name="text">
-    <string>SELECT * FROM PLAYERS WHERE</string>
+    <string>Note: Enter you custom search query here e.g. first_name = &quot;billy&quot;</string>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
@@ -387,7 +393,7 @@
   <widget class="QPushButton" name="custom">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>280</x>
      <y>550</y>
      <width>113</width>
      <height>32</height>
@@ -395,7 +401,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <pointsize>8</pointsize>
     </font>
    </property>
    <property name="autoFillBackground">
@@ -417,7 +423,7 @@
   <widget class="QLineEdit" name="id">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>220</x>
      <y>400</y>
      <width>171</width>
      <height>21</height>
@@ -433,8 +439,33 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <weight>50</weight>
+     <bold>false</bold>
+    </font>
+   </property>
    <property name="text">
     <string>ID of Player</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_9">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>480</y>
+     <width>101</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Custom Search</string>
    </property>
   </widget>
  </widget>
