--- a/compselector.ui
+++ b/compselector.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>TeamSearchDiag</class>
- <widget class="QDialog" name="TeamSearchDiag">
+ <class>CompSelector</class>
+ <widget class="QDialog" name="CompSelector">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,23 +13,52 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>420</x>
+     <y>20</y>
+     <width>151</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Division Name Search</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="searchText">
+   <property name="geometry">
+    <rect>
+     <x>562</x>
+     <y>20</y>
+     <width>211</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QTableView" name="searchTable">
+   <property name="geometry">
+    <rect>
+     <x>12</x>
+     <y>50</y>
+     <width>761</width>
+     <height>511</height>
+    </rect>
+   </property>
+  </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>450</x>
+     <x>453</x>
      <y>570</y>
      <width>321</width>
      <height>32</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <widget class="QPushButton" name="newTeam">
-      <property name="text">
-       <string>New Team</string>
-      </property>
-     </widget>
-    </item>
     <item>
      <widget class="QPushButton" name="cancel">
       <property name="text">
@@ -48,39 +77,6 @@
      </widget>
     </item>
    </layout>
-  </widget>
-  <widget class="QTableView" name="searchTable">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>50</y>
-     <width>761</width>
-     <height>511</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="searchText">
-   <property name="geometry">
-    <rect>
-     <x>562</x>
-     <y>20</y>
-     <width>211</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>440</x>
-     <y>20</y>
-     <width>131</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Team name search</string>
-   </property>
   </widget>
  </widget>
  <resources/>
