--- a/divisionselector.ui
+++ b/divisionselector.ui
@@ -76,6 +76,12 @@
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>searchText</tabstop>
+  <tabstop>cancel</tabstop>
+  <tabstop>add</tabstop>
+  <tabstop>searchTable</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
