--- a/addteamdialog.ui
+++ b/addteamdialog.ui
@@ -159,6 +159,15 @@
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>teamName</tabstop>
+  <tabstop>divisionSearch</tabstop>
+  <tabstop>divisionID</tabstop>
+  <tabstop>compSearch</tabstop>
+  <tabstop>compID</tabstop>
+  <tabstop>cancel</tabstop>
+  <tabstop>apply</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
