--- a/editteamdiag.ui
+++ b/editteamdiag.ui
@@ -222,6 +222,17 @@
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>id</tabstop>
+  <tabstop>search</tabstop>
+  <tabstop>teamName</tabstop>
+  <tabstop>divisionSearch</tabstop>
+  <tabstop>divisionID</tabstop>
+  <tabstop>compSearch</tabstop>
+  <tabstop>compID</tabstop>
+  <tabstop>cancel</tabstop>
+  <tabstop>apply</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
