--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>ACM</string>
   </property>
   <property name="styleSheet">
    <string notr="true">/*QWidget{
@@ -33,6 +33,9 @@ font: 75 15pt &quot;Arial&quot;;
 }
 QLineEdit{ background: grey; };
 */</string>
+  </property>
+  <property name="unifiedTitleAndToolBarOnMac">
+   <bool>false</bool>
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="styleSheet">
@@ -53,6 +56,9 @@ background-image: url(:/logo.png);</string>
     </property>
    </widget>
    <widget class="QTabWidget" name="tabWidget">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -77,7 +83,7 @@ background-image: url(:/logo.png);</string>
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>0</number>
     </property>
     <property name="movable">
      <bool>false</bool>
@@ -229,6 +235,9 @@ background-image: url(:/logo.png);</string>
      </widget>
     </widget>
     <widget class="QWidget" name="Competition">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <attribute name="title">
       <string>Competition</string>
      </attribute>
@@ -349,19 +358,6 @@ background-image: url(:/logo.png);</string>
        <bool>false</bool>
       </attribute>
      </widget>
-     <widget class="QPushButton" name="venueRefine">
-      <property name="geometry">
-       <rect>
-        <x>790</x>
-        <y>320</y>
-        <width>101</width>
-        <height>32</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Search</string>
-      </property>
-     </widget>
     </widget>
     <widget class="QWidget" name="Teams">
      <property name="accessibleName">
@@ -436,19 +432,6 @@ background-image: url(:/logo.png);</string>
        <string>Quick Search</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="teamRefine">
-      <property name="geometry">
-       <rect>
-        <x>790</x>
-        <y>320</y>
-        <width>101</width>
-        <height>32</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Search</string>
-      </property>
-     </widget>
      <widget class="QPushButton" name="teamClear">
       <property name="geometry">
        <rect>
@@ -518,12 +501,18 @@ background-image: url(:/logo.png);</string>
      <string>File</string>
     </property>
     <addaction name="actionSetting"/>
+    <addaction name="actionAbout"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
   <action name="actionSetting">
    <property name="text">
     <string>Settings</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
    </property>
   </action>
  </widget>
