Splash and About Page update

--- a/resources.qrc
+++ b/resources.qrc
@@ -3,5 +3,6 @@
         <file>logo.png</file>
         <file>calendar-1559935_960_720.png</file>
         <file>ACMlogo.PNG</file>
+        <file>ACMSplash.PNG</file>
     </qresource>
 </RCC>
