--- a/about.ui
+++ b/about.ui
@@ -20,7 +20,7 @@
    <property name="geometry">
     <rect>
      <x>-10</x>
-     <y>0</y>
+     <y>-10</y>
      <width>741</width>
      <height>461</height>
     </rect>
@@ -28,12 +28,21 @@
    <property name="styleSheet">
     <string notr="true">background-image: url(:/ACMlogo.PNG);</string>
    </property>
+   <property name="backgroundBrush">
+    <brush brushstyle="NoBrush">
+     <color alpha="255">
+      <red>0</red>
+      <green>0</green>
+      <blue>0</blue>
+     </color>
+    </brush>
+   </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>421</y>
+     <y>410</y>
      <width>681</width>
      <height>20</height>
     </rect>
@@ -49,6 +58,32 @@
    </property>
    <property name="text">
     <string>Designed and developed by Billy Zejnoski and Stefan Marjanovic</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignBottom|Qt::AlignRight|Qt::AlignTrailing</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="version">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>420</y>
+     <width>681</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>9</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(67, 134, 201);</string>
+   </property>
+   <property name="text">
+    <string>Version: this is dynamically updated </string>
    </property>
    <property name="alignment">
     <set>Qt::AlignBottom|Qt::AlignRight|Qt::AlignTrailing</set>
