--- a/teamsearchdiag.ui
+++ b/teamsearchdiag.ui
@@ -82,6 +82,26 @@
     <string>Team name search</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>20</y>
+     <width>141</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Search Team</string>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>searchText</tabstop>
