--- a/compselector.ui
+++ b/compselector.ui
@@ -78,6 +78,26 @@
     </item>
    </layout>
   </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>20</y>
+     <width>131</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Competition</string>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>searchText</tabstop>
