--- a/divisionselector.ui
+++ b/divisionselector.ui
@@ -75,6 +75,26 @@
     </rect>
    </property>
   </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>25</y>
+     <width>191</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Division</string>
+   </property>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>searchText</tabstop>
