--- a/familysearchdiag.ui
+++ b/familysearchdiag.ui
@@ -26,9 +26,9 @@
   <widget class="QLineEdit" name="lname">
    <property name="geometry">
     <rect>
-     <x>640</x>
-     <y>40</y>
-     <width>113</width>
+     <x>650</x>
+     <y>50</y>
+     <width>121</width>
      <height>21</height>
     </rect>
    </property>
@@ -36,8 +36,8 @@
   <widget class="QLabel" name="searchLabel">
    <property name="geometry">
     <rect>
-     <x>540</x>
-     <y>40</y>
+     <x>550</x>
+     <y>50</y>
      <width>91</width>
      <height>20</height>
     </rect>
@@ -55,9 +55,9 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>510</x>
+     <x>470</x>
      <y>570</y>
-     <width>254</width>
+     <width>295</width>
      <height>32</height>
     </rect>
    </property>
@@ -91,7 +91,7 @@
   <widget class="QGroupBox" name="tableGroupBox">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>450</x>
      <y>10</y>
      <width>120</width>
      <height>61</height>
@@ -129,6 +129,26 @@
      <string>Family Table</string>
     </property>
    </widget>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>40</y>
+     <width>161</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Search Family</string>
+   </property>
   </widget>
  </widget>
  <tabstops>
