--- a/refine.ui
+++ b/refine.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>588</height>
+    <height>629</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>110</y>
+     <y>150</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -33,7 +33,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>60</y>
+     <y>100</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -43,7 +43,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>250</y>
+     <y>290</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -53,7 +53,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>60</y>
+     <y>100</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -66,7 +66,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>290</y>
+     <y>330</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -79,7 +79,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>330</y>
+     <y>370</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -104,7 +104,7 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>330</y>
+     <y>370</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -117,7 +117,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>20</y>
+     <y>60</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -127,7 +127,7 @@
    <property name="geometry">
     <rect>
      <x>29</x>
-     <y>20</y>
+     <y>60</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -140,7 +140,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>270</y>
+     <y>310</y>
      <width>171</width>
      <height>41</height>
     </rect>
@@ -182,7 +182,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>210</y>
+     <y>250</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -192,7 +192,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>250</y>
+     <y>290</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -205,7 +205,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>210</y>
+     <y>250</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -218,7 +218,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>430</y>
+     <y>470</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -243,7 +243,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>330</y>
+     <y>370</y>
      <width>113</width>
      <height>32</height>
     </rect>
@@ -262,7 +262,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>110</y>
+     <y>150</y>
      <width>101</width>
      <height>21</height>
     </rect>
@@ -275,7 +275,7 @@
    <property name="geometry">
     <rect>
      <x>330</x>
-     <y>90</y>
+     <y>130</y>
      <width>51</width>
      <height>51</height>
     </rect>
@@ -291,7 +291,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>170</y>
+     <y>210</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -304,7 +304,7 @@
    <property name="geometry">
     <rect>
      <x>330</x>
-     <y>150</y>
+     <y>190</y>
      <width>51</width>
      <height>51</height>
     </rect>
@@ -323,7 +323,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>170</y>
+     <y>210</y>
      <width>101</width>
      <height>21</height>
     </rect>
@@ -336,7 +336,7 @@
    <property name="geometry">
     <rect>
      <x>-20</x>
-     <y>370</y>
+     <y>410</y>
      <width>421</width>
      <height>20</height>
     </rect>
@@ -349,7 +349,7 @@
    <property name="geometry">
     <rect>
      <x>-10</x>
-     <y>460</y>
+     <y>500</y>
      <width>421</width>
      <height>20</height>
     </rect>
@@ -362,7 +362,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>480</y>
+     <y>520</y>
      <width>171</width>
      <height>61</height>
     </rect>
@@ -372,7 +372,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>500</y>
+     <y>540</y>
      <width>181</width>
      <height>41</height>
     </rect>
@@ -394,14 +394,14 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>550</y>
+     <y>590</y>
      <width>113</width>
      <height>32</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>13</pointsize>
+     <pointsize>8</pointsize>
     </font>
    </property>
    <property name="autoFillBackground">
@@ -424,7 +424,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>400</y>
+     <y>440</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -434,7 +434,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>400</y>
+     <y>440</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -453,7 +453,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>480</y>
+     <y>520</y>
      <width>101</width>
      <height>16</height>
     </rect>
@@ -466,6 +466,26 @@
    </property>
    <property name="text">
     <string>Custom Search</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_11">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>10</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Search Player</string>
    </property>
   </widget>
  </widget>
