--- a/settings.ui
+++ b/settings.ui
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>29</x>
-     <y>20</y>
+     <y>60</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>20</y>
+     <y>60</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -40,7 +40,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>60</y>
+     <y>100</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -50,7 +50,7 @@
    <property name="geometry">
     <rect>
      <x>29</x>
-     <y>60</y>
+     <y>100</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -63,7 +63,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>100</y>
+     <y>140</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -76,7 +76,7 @@
    <property name="geometry">
     <rect>
      <x>211</x>
-     <y>100</y>
+     <y>140</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -86,7 +86,7 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>140</y>
+     <y>180</y>
      <width>171</width>
      <height>21</height>
     </rect>
@@ -105,7 +105,7 @@
    <property name="geometry">
     <rect>
      <x>29</x>
-     <y>140</y>
+     <y>180</y>
      <width>121</width>
      <height>20</height>
     </rect>
@@ -117,9 +117,9 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>140</x>
+     <x>100</x>
      <y>260</y>
-     <width>254</width>
+     <width>295</width>
      <height>32</height>
     </rect>
    </property>
@@ -155,6 +155,29 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>10</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Settings</string>
+   </property>
+   <property name="textFormat">
+    <enum>Qt::AutoText</enum>
+   </property>
   </widget>
  </widget>
  <resources/>
